<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Colour Palette Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palette"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <!-- Horizontal Palette -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FF0000"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFA500"
                android:contentDescription="@string/colourswatch" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFFF00"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#0000FF"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#00FF00"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#800080"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#000000"
                android:contentDescription="@string/colourswatch"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/colourswatch"/>
        </LinearLayout>

        <!-- Result Section -->
        <View
            android:id="@+id/resultColor"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#009688"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center" />

        <!-- Colour and Quantity Selection Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/color1Spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/color1Proportion"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="@string/quantity"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/color2Spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/color2Proportion"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="@string/quantity"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/color3Spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/color3Proportion"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="@string/quantity"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Mix Button -->
        <Button
            android:id="@+id/mixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mix"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>